Rename index.html, update prenom.html, realisation.html,style.css, and add images

--- a/versions/index.html
+++ b/versions/index.html
@@ -19,7 +19,7 @@
 
   <nav>
     
-    <a href="index.html.html">Accueil</a>
+    <a href="index.html">Accueil</a>
         
     <a href="equipe.html">Équipe</a>
     <a href="realisation.html">Galerie de projet</a>
